# castles-strategy

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
docs/: ServerClasses.vsdx  ShortGD.docx
sources/: CMakeLists.txt
sources/ActivitiesApplication/: ActivitiesApplication.cpp  ActivitiesApplication.hpp  Activity.cpp  CMakeLists.txt  Exception.hpp  UniversalException.hpp
sources/CastlesStrategy/: CMakeLists.txt
sources/CastlesStrategy/Client/Activity/: StartGameActivity.cpp
sources/CastlesStrategy/Client/Ingame/: CameraHandler.cpp  CameraHandler.hpp  CameraManager.cpp  CameraManager.hpp  DataManager.cpp  DataManager.hpp  DataProcessor.cpp  DataProcessor.hpp  FogOfWarManager.cpp  FogOfWarManager.hpp  IngameActivity.cpp  IngameActivity.hpp  IngameUI.cpp  IngameUI.hpp  IngameUIManager.cpp  IngameUIManager.hpp  NetworkManager.cpp  NetworkManager.hpp  NetworkMessagesProcessor.cpp  NetworkMessagesProcessor.hpp
sources/CastlesStrategy/Client/MainMenu/: MainMenuActivity.cpp  MainMenuActivity.hpp
sources/CastlesStrategy/Server/Activity/: IncomingNetworkMessageProcessors.cpp  IncomingNetworkMessageProcessors.hpp  ServerActivity.cpp  ServerActivity.hpp
sources/CastlesStrategy/Server/Managers/: Manager.hpp  ManagersHub.cpp  ManagersHub.hpp  Map.cpp  Map.hpp  PlayersManager.cpp  PlayersManager.hpp  UnitsManager.cpp  UnitsManager.hpp  VillagesManager.cpp  VillagesManager.hpp
sources/CastlesStrategy/Server/Map/: Route.hpp
sources/CastlesStrategy/Server/Player/: Player.cpp  Player.hpp
sources/CastlesStrategy/Server/Unit/: BasicUnitAI.cpp  BasicUnitAI.hpp  Unit.cpp  Unit.hpp  UnitType.hpp
sources/CastlesStrategy/Server/Village/: Village.cpp  Village.hpp
sources/CastlesStrategy/Shared/: ActivitiesControlEvents.hpp  ChangeActivityEvents.hpp  PlayerType.hpp
sources/CastlesStrategy/Shared/Network/: ClientToServerNetworkMessageType.hpp  OutcomingNetworkMessageType.hpp  ServerConstants.hpp  ServerToClientNetworkMessageType.hpp
sources/CastlesStrategy/Shared/Unit/: BasicUnitAI.cpp  BasicUnitAI.hpp  Unit.cpp  Unit.hpp  UnitType.cpp  UnitType.hpp
sources/CastlesStrategy/Shared/Village/: Village.cpp  Village.hpp
sources/CastlesStrategyClient/: CMakeLists.txt
sources/CastlesStrategyClient/Activity/: ClientActivity.cpp  ClientActivity.hpp  StartGameActivity.cpp  StartGameActivity.hpp
sources/CastlesStrategyLauncher/: CMakeLists.txt  LauncherApplication.cpp  LauncherApplication.hpp
sources/CastlesStrategyServer/: CMakeLists.txt
sources/CastlesStrategyServer/Activity/: IncomingNetworkMessageProcessors.hpp  IncomingNetworkMessageType.hpp  OutcomingNetworkMessageType.hpp  ServerActivity.cpp  ServerActivity.hpp
sources/CastlesStrategyServer/Managers/: GameStatus.hpp  Manager.cpp  Manager.hpp  ManagersHub.cpp  ManagersHub.hpp  Map.cpp  Map.hpp  PlayersManager.hpp  UnitsManager.cpp  UnitsManager.hpp
sources/CastlesStrategyServer/Map/: Route.cpp  Route.hpp
sources/CastlesStrategyServer/Player/: Player.cpp  Player.hpp
sources/CastlesStrategyServer/Unit/: BasicUnitAI.cpp  BasicUnitAI.hpp  BasicUnitAi.cpp  BasicUnitAi.hpp  Unit.cpp  Unit.hpp  UnitType.cpp  UnitType.hpp
sources/EditorLauncher/: CMakeLists.txt  EditorLauncher.cpp
sources/Tests/: CMakeLists.txt
sources/Tests/TestAttackAndMovement/: CMakeLists.txt  TestAttackAndMovement.cpp
sources/Tests/TestMovement/: CMakeLists.txt  TestMovement.cpp
sources/Tests/TestPlayerOrders/: CMakeLists.txt  TestPlayerOrders.cpp
sources/Tests/TestSpawns/: CMakeLists.txt  TestSpawns.cpp
sources/Tests/TestVillages/: CMakeLists.txt  TestVillages.cpp
sources/Utils/: UIResizer.cpp  UIResizer.hpp  UniversalException.hpp
